generated some samples which you can now run with gradle <example>.groovy but still get warning issues - but at least the forms open